# nhvr-tools

./: .gitignore  CHANGELOG.md  CLAUDE_HANDOFF.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: async_usage.py  basic_usage.py
nhvr_mcp/: __init__.py  api_client.py  cli.py  formatters.py  knowledge.py  models.py  scraper.py  sdk.py  section_parsers.py  server.py  tools.py
scripts/: inspect_dimension.py  inspect_mass.py  inspect_mcp_client.py
tests/: test_basic.py  test_breach_parser.py  test_cor_parser.py  test_dimension_parser.py  test_fatigue_parser.py  test_knowledge.py  test_mass_parser.py  test_other_parsers.py  test_sdk.py
